--- a/Capitulos/cap1.tex
+++ b/Capitulos/cap1.tex
@@ -1,4 +1,50 @@
 \chapter{Introducción}
+
+La mecánica estadística es la base de la termodinámica pero históricamente primero apareció la termodinámica. La termodinámica fue la agrupación de varias ideas en el siglo diecinueve que encerraban varios tipos de experimentos  y conceptos que desde la antigua Grecia. Aunque las ideas que surgieron en la antigüedad se han ido refinando como ejemplo Klaudios Galenos (133-200 A.C) suponía que la influencia del clima sobre los fluidos del cuerpo podría determinar el carácter de una persona. Así decía que los habitantes del norte frío y húmedo eran salvajes y violentos, al contrario de los habitantes del sur, caliente y seco, eran flácidos y mansos. Esto muestra que la idea de temperatura ha sido conocida de alguna u otra manera. Ya en el año 1578  Johannis Hasler presentó una tabla de las temperaturas corporales de las personas en relación a la altura en la que vivían. Pero como se conoce ahora mientras se tenga una buena salud no importa la altura se debe tener la misma temperatura corporal. Este error fue debido a los instrumentos de medición usados en esa época. Ya en el inicio del siglo 17 ya se tenía el termómetro. Gracias a este instrumento muchas ideas equivocadas dadas por la subjetividad de los sentidos sobre el calor y el frío se fueron eliminando. Ya en los años 1700 empezaron a aparecer las escalas de temperatura, hubo incluso 18 escalas en algún tiempo. En 1848 William Thompson (Lord Kelvin)  introdujo la escala absoluta o la escala Kelvin. Esta cuenta desde el cero absoluto en adelante, el punto de ebullición del agua a  1 atm es 373.15 Kelvin.
+\\
+Otra importante parte de la termodinámica es la energía pero en sus inicios no se habla de eso; era calor o fuerza. Pero no se comprendía qué era el calor. La teoría calórica pretendía dar explicación al calor, entre varias propuesta se pueden ver las de Pierre Gassendi (1592-1655) donde proponía que el calor y el frío eran tipos de materia diferente. Consideraba a los átomos del frío como tetraedros y al entrar a un líquido se solidificaría. Antoine Laurent Lavoisier (1743-1794) consideró al calor como otro elemento, junto con la luz, y lo consideraba como un fluido que llamaba el calórico. Una de las primeras personas en cuestionar la teoría calórica fue Graf Von Rumford(1753-1814), observando unos cañones y cómo cambiaba el calor liberado dependiendo de si estaban afilados  o no. Concluyó que el calor debía ser el mismo que fue administrado debido al movimiento. Rumford siguió trabajando en su idea del equivalente mecánico del calor, con dos caballo moviendo un cabrestante nota que el calor del barril es igual "al de 9 velas grande", más adelante precisó su hallazgo. Rumford siguió haciendo experimentos sobre el calor, midió de manera meticulosa el peso del agua antes y después de ser congelada. Encontró que el peso no cambiaba pero aún así dio calor en el proceso. Entonce concluyó que si el calórico existía era imponderable. Pese a los experimentos realizados por Rumford la teoría calórica siguió siendo la favorita por 40 años.	
+\\
+Robert Julius Mayer (1814-1878) estudio medicina pero su entusiasmo hacia la física lo guió para hacer experimentos en este campo. La idea principal que tenía Mayer era que la energía se conservaba de forma general. Es decir cualquier fenómeno capaz de aportar energía debía tenerse en cuenta al momento de un experimento. Gracias a sus estudios por su cuenta sabía que la energía cinética, fuerza viva en sus  palabras, podía convertirse en calor. Experimentalmente llegó a que la caída de un peso a una altura  de 365 metros correspondía a calentar el mismo peso de agua de $0^{\circ}$ a $1^{\circ}$. No es muy exacto pero estuvo bastante cerca, incluso llegó a cambiar la altura a 425 metros luego de que Joule hiciera mejores mediciones. Mayer tenía ideas bastante originales aunque en general no sabía expresarlas, por falta de experiencia matemática y su aislamiento de la comunidad científica. Pero Mayer fue el primero en hablar sobre máquinas térmicas y decir que el calor absorbido por el vapor era siempre mayor que el calor liberado durante la condensación y su diferencia era trabajo útil. Esta idea se expuso antes que Carnot y Clapeyron. Aunque tenía un manejo sobre el calor, no sabía la naturaleza verdadera del calor.
+\\
+James Prescott Joule (1818-1889) proporcionó, en extremo detalle, observaciones sobre el calor y la temperatura. Sus experimentos eran discutidos en sus escritos de forma muy extensa, dando presumibles errores, compensando perdidas, sus experimentos eran tan detallados que algunos de sus artículos se volvieron estándares. Es por eso que Mayer revisó sus experimentos respecto a los de Joule. Uno de los aportes de Joule fueron que gracias a sus experimentos se podía aceptar la conservación de la energía. Pero fue Hermann Ludwig Ferdinand Helmholtz(1821-1894) quien propuso la idea de que lo llamado calor era la energía cinética del movimiento térmico de los átomos. Fue Helmhotlz el primero en dejar la idea de un fuerza viva y llamarlo energía. EL trabajo de Helmholtz fue importante ya que Joule y  Mayer no podía dar una visión clara sobre lo que se llama calor, y divagaban entre calor y fuerza; Helmholtz dejó los conceptos más claros en comparación con ellos dos.  Todo este proceso hitórico es uno de los procesos para poder dar la primera ley de la termodinámica, se puede ver que la historia de la energía no es un proceso tan claro y llegar hasta la idea actual no fue para nada rápido ni sencillo. Puede ponerse en contraposición la mecánica cuántica que aunque fue inspirada también de la radiación del cuerpo negro, un tema que en ese entonces era tratado por la termodinámica, se construyó en menos años; aunque con ideas confusas pero su construcción matemática y teórica no fue demorada por siglos. Pero a diferencia de la energía, la entropía era un concepto más provocador al momento de darle un sentido microscópico. La historia de la  entropía empieza por los motores térmicos hay especulaciones que en el primer siglo antes de cristo ya existían algunas máquinas que funcionaban con vapor de agua, Hero de Alexandría se especula que hizo una de esa máquinas. Pero en el siglo 18 Thomas Newcome y Thomas Savery crearon una máquina de vapor que inicialmente ayudaba a sacar agua de las minas. Pero James Watt(1736-1819) mejoró esa máquina de vapor haciendo una que era de 3 a 4 veces más eficiente. Nicolas Léonard Sadi Carnot (1796-1832) se preguntó sobre que tanto se puede mejorar una máquina térmica 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+\begin{comment}
+
 En este corto capítulo se espera motivar la idea general de este escrito, mostrando un poco cuál ha sido el problema con los fundamentos de la mecánica estadística. En los siguientes capítulos se explicará el nuevo enfoque dado por Popescu et al \cite{Popescu2006}.
 \\
 La mecánica estadística estudia los cuerpos macroscópicos, los cuales están compuestos por un gran número de partículas. Los métodos que ayudan al análisis de estos cuerpos por lo general no dependen de la forma en que se pueda describir una sola partícula (ecuaciones de movimiento para una partícula) sino se respaldan en métodos probabilísticos. A inicios del siglo 19 la teoría de la termodinámica cogía fuerza y mostraba coherencia con los datos experimentales pero se quiso fundamentar la termodinámica desde una perspectiva microscópica. La entropía un concepto nacido en la termodinámica no tenía una clara idea de qué representaba. Boltzmann propone una función H que da la entropía correcta cuando no hay interacción entre las partículas del sistema; su idea detrás de esta función es simplemente tomar la densidad en el espacio de fase de una partícula y multiplicarla por $N$, este es el número de componentes en el cuerpo macroscópico. La función de Boltzmann es:
@@ -17,6 +63,6 @@ Otro problema que ocurre es que el principio en el que se basa la mecánica esta
 \\
 Además de estos problemas existe el conflicto sobre los promedios de ensamble. Con las ideas de Gibbs se puede encontrar promedios pero como la función de densidad es de las copias de los microestados, ¿ qué significa un promedio de ensamble?. Se toma el camino ergódico donde se supone que el promedio de ensamble es igual al promedio temporal, este supuesto se fundamenta en que el estado va a pasar por todos lo microestados posbiles en el espacio de fase. El conflicto con eso es que hay sistemas que no pasan por todos los microestados posibles pero aún así se puede manejar estos sistemas; el tiempo necesario para que el estado pase por todos los microestados es bastante largo. Esto problemas son los que dejan al marco teórico de la mecánica estadística como algo controversial. 
 
-
+\end{comment}
 
 
