--- a/main.tex
+++ b/main.tex
@@ -12,6 +12,7 @@
 \usepackage{enumerate}
 \usepackage{graphicx}
 \usepackage{xr}
+\usepackage{verbatim}
 %\usepackage{subfig} %para poner subfiguras
 \graphicspath{{Img/}} %En qué carpeta están las imágenes
 \usepackage[nottoc]{tocbibind}
@@ -79,7 +80,7 @@
 
 \vspace{4em}
 
-\textsc{\huge \textbf{Revisión de los fundamentos termodinámicos desde la perspectiva de la teoría de la información cuántica}}\\[4em]
+\textsc{\huge \textbf{Revisión de los fundamentos de la mecánica estadística desde la perspectiva de la teoría cuántica de la información}}\\[4em]
 
 \textsc{\large Tesis}\\[1em]
 
