--- a/Capitulos/cap1.tex
+++ b/Capitulos/cap1.tex
@@ -10,11 +10,34 @@ Robert Julius Mayer (1814-1878) estudio medicina pero su entusiasmo hacia la fí
 \\
 James Prescott Joule (1818-1889) proporcionó, en extremo detalle, observaciones sobre el calor y la temperatura. Sus experimentos eran discutidos en sus escritos de forma muy extensa, dando presumibles errores, compensando perdidas, sus experimentos eran tan detallados que algunos de sus artículos se volvieron estándares. Es por eso que Mayer revisó sus experimentos respecto a los de Joule. Uno de los aportes de Joule fueron que gracias a sus experimentos se podía aceptar la conservación de la energía. Pero fue Hermann Ludwig Ferdinand Helmholtz(1821-1894) quien propuso la idea de que lo llamado calor era la energía cinética del movimiento térmico de los átomos. Fue Helmhotlz el primero en dejar la idea de un fuerza viva y llamarlo energía. EL trabajo de Helmholtz fue importante ya que Joule y  Mayer no podía dar una visión clara sobre lo que se llama calor, y divagaban entre calor y fuerza; Helmholtz dejó los conceptos más claros en comparación con ellos dos.  Todo este proceso hitórico es uno de los procesos para poder dar la primera ley de la termodinámica, se puede ver que la historia de la energía no es un proceso tan claro y llegar hasta la idea actual no fue para nada rápido ni sencillo. Puede ponerse en contraposición la mecánica cuántica que aunque fue inspirada también de la radiación del cuerpo negro, un tema que en ese entonces era tratado por la termodinámica, se construyó en menos años; aunque con ideas confusas pero su construcción matemática y teórica no fue demorada por siglos. Pero a diferencia de la energía, la entropía era un concepto más provocador al momento de darle un sentido microscópico. La historia de la  entropía empieza por los motores térmicos hay especulaciones que en el primer siglo antes de cristo ya existían algunas máquinas que funcionaban con vapor de agua, Hero de Alexandría se especula que hizo una de esa máquinas. Pero en el siglo 18 Thomas Newcome y Thomas Savery crearon una máquina de vapor que inicialmente ayudaba a sacar agua de las minas. Pero James Watt(1736-1819) mejoró esa máquina de vapor haciendo una que era de 3 a 4 veces más eficiente. Nicolas Léonard Sadi Carnot (1796-1832) se preguntó sobre que tanto se puede mejorar una máquina térmica. Carnot publicó un libro donde muestra aseveraciones que intentan resolver la pregunta hechas; una máquina que trabaja entre dos temperaturas y solo intercambia calor entre ellas, su eficiencia solo depende de la  las temperatura, $e=F(T)dT$ para un delta de temperatura, incluso aunque las máquinas se manejen con agentes diferentes para generar trabajo. Aunque Carnot seguía creyendo en la teoría calórica para llegar a estas ideas no fue necesario saber que esta teoría estaba incorrecta para llegar a sus resultados. Carnot no pudo encontrar exactamente los valores de la eficiencia. Clapeyron y Kelvin no pudieron tampoco encontrar los valores de esta eficiencia ni por mediciones ni por cálculos. Ya en 1850 se estaba asegurando que la teoría calórica estaba mal formulada y se debía hacer algo; Clausius retocó algunas ideas de Carnot y pudo encontrar la eficiencia del ciclo de Carnot. Clausius le dio forma a la termodinámica actual, hasta los cursos actuales de termodinámica siguen un artículo de Clausius que habla de gases ideales y vapor húmedo. Clausius amplió sus investigaciones a ciclos no infinitesimales y a procesos no reversibles, él fue quien dio la idea de la entropía y sus propiedades. Con eso propuso la segunda ley de la termodinámica: El calor no puede pasar solo de un cuerpo frío a un cuerpo caliente. Clausius llamó $S=\frac{Q}{T}$ la entropía y vio que esto era lo que se conservaba en un ciclo de Carnot. Pero en términos de los átomos qué significa $S$.
 \\\
-Paralelamente a mitad del siglo 19 se trabajaba en la teoría cinética de los gases. Esta reposaba en dos suposiciones la primera que los gases eras sistemas mecánicos de muchas partículas idénticas. La segunda era que debido a la gran cantidad de partículas se debía introducir probabilidades para así ver algunas regularidades que salían debido a las configuraciones de las moléculas. Clausius como Kröing y Maxwell trabajaron en esta teoría sacando bastantes resultados. Pero los fundamentos nunca se vieron con cuidado. Boltzmann por otro lado intentó darle un sentido microscópico a la entropía con ayuda de su teorema H.
+Paralelamente a mitad del siglo 19 se trabajaba en la teoría cinética de los gases. Esta reposaba en dos suposiciones la primera que los gases eras sistemas mecánicos de muchas partículas idénticas. La segunda era que debido a la gran cantidad de partículas se debía introducir probabilidades para así ver algunas regularidades que salían debido a las configuraciones de las moléculas. Personas como Calusius, Maxwell y Boltzmann trabajaron en esta área y produjeron resultados importantes aunque algunos concordaban con los resultados experimentales, hubo muchas discusiones sobre las hipótesis usadas para llegar a estos resultados. Por ejemplo en los trabajos de Clausius utiliza hace uso de los siguientes supuestos para gases en reposo y en equilibrio térmico: Las moléculas que están dentro de un recipiente se encuentran distribuidas con la misma densidad en todo el recipiente, la distribución de velocidades es igual en todo el recipiente, todas las direcciones de velocidad son igual de probables. Estas tres hipótesis son el inicio para ver los sistemas mecánicos con una perspectiva probabilística. Maxwell convirtió las ideas de Clausius sobre la  poca dispersión de la distribución de velocidad en algo que se podía calcular. Así que Maxwell propuso en 1859 su ley de distribución
+\begin{equation}
+f(u,v,w) \Delta u \Delta v \Delta w = A e^{-B(u^{2}+v^{2}+w^{2})}  \Delta u \Delta v \Delta w.
+\end{equation}
+Donde $f(u,v,w) \Delta u \Delta v \Delta w $ es el número de moléculas entre esos límites de velocidades, cada límite representa un componente de la velocidad. Botlzmann en 1868 generalizó el resultado de Maxwell, ahora se tiene la misma situación de un gas en equilibrio y en reposo, pero ahora se tiene un campo de fuerza externo actuando sobre las moléculas. Además Boltzman tuvo en cuenta que las moléculas eran compuestas de otras partículas  lo cual afecta en los diferentes valores de energía potencial. Entonces denotando a $\Delta \tau$ como el rango de variaciones muy pequeñas que puede tener el estado de la molécula, o sea $\Delta \tau= \Delta x \Delta y \Delta z \Delta u \Delta v \Delta w$. La generalización dada por Boltzmann es
+\begin{equation}
+f(x,y,z,u,v,w) \Delta \tau = \alpha e^{-\beta E} \Delta \tau.
+\end{equation}
+$E$ es la energía total que tiene la molécula esto es la energía cinética, energía potencial interna y energía potencial externa. Esta generalización es llamada la distribución de Maxwell-Boltzmann. Boltzmann además mostró que cualquier otra distribución bajo la condición de colisiones entre partículas evoluciona hacía la distribución de Maxwell-Boltzmann, se usó el teorema H para concluir esto.
 
+Para hablar del teorema H primero se debe explicar la ecuación de transporte de Boltzmann. La ecuación de transporte de Boltzmann puede ser derivada desde la jerarquía de Bogoliubov-Born-Green-Kirkwood-Yvon o mirando el problema del número de partículas en un rango del estado de una molécula en el espaico de fase. Para ambas rutas se debe hacer supuestos para poder seguir con el análisis, esto no se mostrará acá dado que no es pertinente seguir todos los pasos. La ecuación de transporte de Boltzmann describe cómo la distribución de moléculas $f(\vec{r},\vec{p},t)$, donde $\vec{r}$ es la posición y $\vec{p}$ es el momento,  evoluciona en el tiempo. La ecuación es 
 
-
-
+\begin{align*}
+(\frac{\partial}{\partial t}- \frac{\partial U}{\partial \vec{q}_{1}} \cdot \frac{\partial}{\partial \vec{p}_{1}} +\frac{\vec{p}_{1}}{m} \cdot \frac{\partial}{\partial \vec{q}_{1}})f 
+\\
+=- \int d^{3}\vec{p}_{2}d^{2} \Omega |\frac{d \sigma}{d \Omega}| |\vec{v}_{1}-\vec{v}_{2}|[f(\vec{p}_{1},\vec{q}_{1},t)f(\vec{p}_{2},\vec{q}_{1},t) - f(\vec{p}_{1}',\vec{q}_{1},t)f(\vec{p}_{2}',\vec{q}_{1},t)].
+\end{align*}
+Esta ecuación se puede leer como: el término a la izquierda describe el movimiento de una partícula en un potencial U, el término de la derecha es la probabilidad de encontrar una partícula con momento $\vec{p}_{1}$ en $\vec{q}_{1}$ ser alterada por una colisión con una partícula con momento $\vec{p}_{2}$.  La probabilidad de esta colisión está dada por el producto de los factores cinéticos proporcionado por la sección transversal diferencial $ |\frac{d \sigma}{d \Omega}|$, el flujo de partículas incidentes $|\vec{v}_{1}-\vec{v}_{2}|$ y la probabilidad de encontrar dos partículas $[f(\vec{p}_{1},\vec{q}_{1},t)f(\vec{p}_{2},\vec{q}_{1},t)$. El primer término substrae la probabilidad e integra sobre todos lo momentos posibles y el ángulo sólido. El segundo término es la adición del proceso inverso. 
+El teorema H dice que si f satisface la ecuación de transporte de Boltzmann, entonces $\frac{dH}{dt} \leq 0$, donde 
+\begin{equation}
+H(t)= \int d^{3} \vec{p}_{1} d^{3} \vec{q}_{1}  f(\vec{p},\vec{q},t) \ln (f(\vec{p},\vec{q},t)).
+\end{equation}
+Con este teorema se puede demostrar que la distribución en el equilibrio es la distribución de Maxwell-Boltzmann. o sea cuando $t \to \infty$ la distribución  $f(\vec{p},t) \to f_{0}(\vec{p})=  \alpha e^{-\beta E}$. Pero hay un punto importante aquí y es algo que también en su época desconcertó a los contemporáneos de Boltzmann, ¿ cómo es posible llegar a una descripción de fenómenos irreversibles que muestran una dirección temporal pero se empezó con una teoría de un gas reversible?. Esto viene dado por las suposiciones echas al derivar la ecuación de transporte de Boltzmann. Se usa la hipótesis de caos molecular (Stosszahlanzatz), esta dice que después de una colisión las partículas están descorrelacionadas esto quiere decir $F(\vec{r},\vec{p}_{1},\vec{p}_{2},t)=f(\vec{r},\vec{p}_{1},t)f(\vec{r},\vec{p}_{2},t)$. Entonces es en este punto en el que la simetría temporal se rompe y hace que haya una dirección particular para el tiempo. 
+El teorema H fue usado por Boltzmann para poder darle una base microscópica a la segunda ley. La relación es 
+\begin{equation}
+S(t)= \frac{H(t)}{k_{B}}
+\end{equation}
+donde $S$ es la entropía y $k_{B}$ la constante de Boltzmann. Pero también Boltzmann recibió muchas críticas sobre  la posibilidad de asociar a H la entropía. Una de las objeciones que recibió fue sobre la posibilidad de poner todas las velocidades de las moléculas de forma opuesta a las dadas inicialmente, esto daría resultados opuestos a los que se esperaban. Si inicialmente se encontraba que H decrecía ahora al invertir las velocidades se halla que H aunmenta, esto significa que hay un caso para el cual la entropía disminuye lo cual va encontra de la segunda ley. Otro problema dado por E. Zermelo es que Poincaré había demostrado que en ese modelo cinético de un gas aislado, el sistema secomportaba quasiperiódico. Esto quiere decir que la función H puede ir asumiendo valores más grandes después de un periodo.
 
 
 
