Gibbs vs Boltzmann

--- a/Capitulos/cap1.tex
+++ b/Capitulos/cap1.tex
@@ -10,6 +10,7 @@ Robert Julius Mayer (1814-1878) estudio medicina pero su entusiasmo hacia la fí
 \\
 James Prescott Joule (1818-1889) proporcionó, en extremo detalle, observaciones sobre el calor y la temperatura. Sus experimentos eran discutidos en sus escritos de forma muy extensa, dando presumibles errores, compensando perdidas, sus experimentos eran tan detallados que algunos de sus artículos se volvieron estándares. Es por eso que Mayer revisó sus experimentos respecto a los de Joule. Uno de los aportes de Joule fueron que gracias a sus experimentos se podía aceptar la conservación de la energía. Pero fue Hermann Ludwig Ferdinand Helmholtz(1821-1894) quien propuso la idea de que lo llamado calor era la energía cinética del movimiento térmico de los átomos. Fue Helmhotlz el primero en dejar la idea de un fuerza viva y llamarlo energía. EL trabajo de Helmholtz fue importante ya que Joule y  Mayer no podía dar una visión clara sobre lo que se llama calor, y divagaban entre calor y fuerza; Helmholtz dejó los conceptos más claros en comparación con ellos dos.  Todo este proceso hitórico es uno de los procesos para poder dar la primera ley de la termodinámica, se puede ver que la historia de la energía no es un proceso tan claro y llegar hasta la idea actual no fue para nada rápido ni sencillo. Puede ponerse en contraposición la mecánica cuántica que aunque fue inspirada también de la radiación del cuerpo negro, un tema que en ese entonces era tratado por la termodinámica, se construyó en menos años; aunque con ideas confusas pero su construcción matemática y teórica no fue demorada por siglos. Pero a diferencia de la energía, la entropía era un concepto más provocador al momento de darle un sentido microscópico. La historia de la  entropía empieza por los motores térmicos hay especulaciones que en el primer siglo antes de cristo ya existían algunas máquinas que funcionaban con vapor de agua, Hero de Alexandría se especula que hizo una de esa máquinas. Pero en el siglo 18 Thomas Newcome y Thomas Savery crearon una máquina de vapor que inicialmente ayudaba a sacar agua de las minas. Pero James Watt(1736-1819) mejoró esa máquina de vapor haciendo una que era de 3 a 4 veces más eficiente. Nicolas Léonard Sadi Carnot (1796-1832) se preguntó sobre que tanto se puede mejorar una máquina térmica. Carnot publicó un libro donde muestra aseveraciones que intentan resolver la pregunta hechas; una máquina que trabaja entre dos temperaturas y solo intercambia calor entre ellas, su eficiencia solo depende de la  las temperatura, $e=F(T)dT$ para un delta de temperatura, incluso aunque las máquinas se manejen con agentes diferentes para generar trabajo. Aunque Carnot seguía creyendo en la teoría calórica para llegar a estas ideas no fue necesario saber que esta teoría estaba incorrecta para llegar a sus resultados. Carnot no pudo encontrar exactamente los valores de la eficiencia. Clapeyron y Kelvin no pudieron tampoco encontrar los valores de esta eficiencia ni por mediciones ni por cálculos. Ya en 1850 se estaba asegurando que la teoría calórica estaba mal formulada y se debía hacer algo; Clausius retocó algunas ideas de Carnot y pudo encontrar la eficiencia del ciclo de Carnot. Clausius le dio forma a la termodinámica actual, hasta los cursos actuales de termodinámica siguen un artículo de Clausius que habla de gases ideales y vapor húmedo. Clausius amplió sus investigaciones a ciclos no infinitesimales y a procesos no reversibles, él fue quien dio la idea de la entropía y sus propiedades. Con eso propuso la segunda ley de la termodinámica: El calor no puede pasar solo de un cuerpo frío a un cuerpo caliente. Clausius llamó $S=\frac{Q}{T}$ la entropía y vio que esto era lo que se conservaba en un ciclo de Carnot. Pero en términos de los átomos qué significa $S$.
 \\\
+\section{teoría cinética}
 Paralelamente a mitad del siglo 19 se trabajaba en la teoría cinética de los gases. Esta reposaba en dos suposiciones la primera que los gases eras sistemas mecánicos de muchas partículas idénticas. La segunda era que debido a la gran cantidad de partículas se debía introducir probabilidades para así ver algunas regularidades que salían debido a las configuraciones de las moléculas. Personas como Calusius, Maxwell y Boltzmann trabajaron en esta área y produjeron resultados importantes aunque algunos concordaban con los resultados experimentales, hubo muchas discusiones sobre las hipótesis usadas para llegar a estos resultados. Por ejemplo en los trabajos de Clausius utiliza hace uso de los siguientes supuestos para gases en reposo y en equilibrio térmico: Las moléculas que están dentro de un recipiente se encuentran distribuidas con la misma densidad en todo el recipiente, la distribución de velocidades es igual en todo el recipiente, todas las direcciones de velocidad son igual de probables. Estas tres hipótesis son el inicio para ver los sistemas mecánicos con una perspectiva probabilística. Maxwell convirtió las ideas de Clausius sobre la  poca dispersión de la distribución de velocidad en algo que se podía calcular. Así que Maxwell propuso en 1859 su ley de distribución
 \begin{equation}
 f(u,v,w) \Delta u \Delta v \Delta w = A e^{-B(u^{2}+v^{2}+w^{2})}  \Delta u \Delta v \Delta w.
@@ -35,17 +36,27 @@ H(t)= \int d^{3} \vec{p}_{1} d^{3} \vec{q}_{1}  f(\vec{p},\vec{q},t) \ln (f(\vec
 Con este teorema se puede demostrar que la distribución en el equilibrio es la distribución de Maxwell-Boltzmann. o sea cuando $t \to \infty$ la distribución  $f(\vec{p},t) \to f_{0}(\vec{p})=  \alpha e^{-\beta E}$. Pero hay un punto importante aquí y es algo que también en su época desconcertó a los contemporáneos de Boltzmann, ¿ cómo es posible llegar a una descripción de fenómenos irreversibles que muestran una dirección temporal pero se empezó con una teoría de un gas reversible?. Esto viene dado por las suposiciones echas al derivar la ecuación de transporte de Boltzmann. Se usa la hipótesis de caos molecular (Stosszahlanzatz), esta dice que después de una colisión las partículas están descorrelacionadas esto quiere decir $F(\vec{r},\vec{p}_{1},\vec{p}_{2},t)=f(\vec{r},\vec{p}_{1},t)f(\vec{r},\vec{p}_{2},t)$. Entonces es en este punto en el que la simetría temporal se rompe y hace que haya una dirección particular para el tiempo. 
 El teorema H fue usado por Boltzmann para poder darle una base microscópica a la segunda ley. La relación es 
 \begin{equation}
-S(t)= \frac{H(t)}{k_{B}}
+S(t)=- \frac{H(t)}{k_{B}}
 \end{equation}
-donde $S$ es la entropía y $k_{B}$ la constante de Boltzmann. Pero también Boltzmann recibió muchas críticas sobre  la posibilidad de asociar a H la entropía. Una de las objeciones que recibió fue sobre la posibilidad de poner todas las velocidades de las moléculas de forma opuesta a las dadas inicialmente, esto daría resultados opuestos a los que se esperaban. Si inicialmente se encontraba que H decrecía ahora al invertir las velocidades se halla que H aunmenta, esto significa que hay un caso para el cual la entropía disminuye lo cual va encontra de la segunda ley. Otro problema dado por E. Zermelo es que Poincaré había demostrado que en ese modelo cinético de un gas aislado, el sistema secomportaba quasiperiódico. Esto quiere decir que la función H puede ir asumiendo valores más grandes después de un periodo.
-
-
-
-
-
-
-
-
+donde $S$ es la entropía y $k_{B}$ la constante de Boltzmann. Pero también Boltzmann recibió muchas críticas sobre  la posibilidad de asociar a H la entropía. Una de las objeciones que recibió fue sobre la posibilidad de poner todas las velocidades de las moléculas de forma opuesta a las dadas inicialmente, esto daría resultados opuestos a los que se esperaban. Si inicialmente se encontraba que H decrecía ahora al invertir las velocidades se halla que H aunmenta, esto significa que hay un caso para el cual la entropía disminuye lo cual va encontra de la segunda ley. Otro problema dado por E. Zermelo es que Poincaré había demostrado que en ese modelo cinético de un gas aislado, el sistema secomportaba quasiperiódico. Esto quiere decir que la función H puede ir asumiendo valores más grandes después de un periodo. 
+\\
+Ya más adelante W. Gibbs con su libro Elementary Principles of Statistica Mechanics en 1901 ya propuso la forma actual de hacer física estadística. El propuso las ideas que se expusieron en los preliminares, las ideas de ensambles microcanónico y canónico fueron gracias a él. Aunque Gibbs volviera la mecánica estadística más moderna no le quitaba algunos problemas; es más puso en ella otro problema con su idea de ensambles. Los promedios se encuentran gracias a los ensambles de varias copias idénticas del sistema pero en microestados diferentes que son admisibles por los parámetros macroscópicos. Pero no significa que el sistema que se está estudiando está en todos esos estados es solo un método para poder lograr describir una densidad en el espacio de fase, que luego se usa para poder calcular propiedades del sistema. Aquí entra la pregunta de que tan posible es hablar de copias imaginarias del sistema, sabiendo que solo existe uno. En el artículo hecho por E.T Jaynes se habla de las propuestas dadas por Boltzmann y Gibbs para la entropía. En este artículo pone las diferencias entre cada pero muestra que la entropía dada por Gibbs es la correcta. Siguiendo la notación del artículo,$d\Gamma \equiv d^{3}x_{1}...d^{3}p_{N}$, $d\Gamma_{1} \equiv d^{3}x_{1}d^{3}p_{1}$, $d\Gamma_{-1} \equiv d^{3}x_{2}...d^{3}p_{N}$; se define un ensamble por su función de distribución de $N$ partículas,$W_{N}(x_{1},x_{2},..,x_{N};p_{1},p_{2},...,p_{N};t)$, la cual da la densidad de probabilidad del sistame en todo  el espacio de fase. La función H de Gibbs esta dada por
+\begin{equation}
+H_{G}= \int W_{N} \log W_{N} d \Gamma,
+\end{equation}
+y la función H de Boltzman está dada por 
+\begin{equation}
+H_{B}=N \int w_{1} log w_{1} d\Gamma_{1}.
+\end{equation}
+Donde $w_{1}(x_{1},p_{1},t)$ es la probabilidad de densida de una sola partícula, 
+\begin{equation}
+w_{1}(x_{1},p_{1},t)= \int W_{N} d \Gamma_{-1}.
+\end{equation}
+En este artículo Jaynes muestra en el teorema 1 que 
+\begin{equation}
+H_{B} \leq H_{G},
+\end{equation}
+y la igualdad se cumple solo cuando $W_{N}(x_{1},x_{2},..,x_{N};p_{1},p_{2},...,p_{N})=w_{1}(x_{1},p_{1})..w_{1}(x_{N},p_{N},$,  es decir hay independencia entre las partículas esto es el caso para un gas que no tiene interacción entre partículas, gas ideal. Gracias a esto Jaynes prosigue con mostrar que la entropía de Boltzmann, $S_{B}=k_{B}H_{B}$, solo es cierta cuando se habla de un fluido con la misma densidad y temperatura en todo el espacio pero sin fuerzas entre partículas. Mientras la entropía de Gibbs, $S_{G}=k_{B}H_{G}$, es válida para cualquier sistema porque da la entropía fenomenológica de la termodinámica. Concluye que esta diferencia no puede ser pequeña porque hay interacciones entre partículas muy importantes que afectan ampliamente el resultado. Esto muestra que aunque la idea de Gibbs sobre un ensamble 
 
 
 
